tests/macros/select/filter.stderr
error: option `filter` does not exist for kind `select`
 --> $DIR/filter.rs:2:46
  |
2 |     let q = inquisition::questions![Select { filter: todo!() }];
  |                                              ^^^^^^
