tests/macros/select/filter.rs
fn main() {
    let q = inquisition::questions![Select { filter: todo!() }];
}
